--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,92 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap");
+@import "tailwindcss";
+
+@plugin "daisyui";
+
+html,
+body {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: "Prompt", "mitr";
+}
+
+@theme {
+    --font-prompt: "Prompt", "Kanit";
+
+    /* Colour */
+    --color-btn-primary: #3E5CE9;
+    --color-btn-sky-blue: #80C0E7;
+    --color-btn-success: #88C939;
+    --color-btn-error: #E05E5E;
+    --color-header-primary: #3B9BD5;
+    --color-header-orange: #FB9107;
+    --color-header-secondary: #2BAAF7;
+}
+
+
+@plugin "daisyui/theme" {
+    name: "corporate";
+    default: true;
+    prefersdark: false;
+    color-scheme: "light";
+    --color-base-100: oklch(100% 0 0);
+    --color-base-200: oklch(93% 0 0);
+    --color-base-300: oklch(86% 0 0);
+    --color-base-content: oklch(22.389% 0.031 278.072);
+    --color-primary: oklch(58% 0.158 241.966);
+    --color-primary-content: oklch(100% 0 0);
+    --color-secondary: oklch(55% 0.046 257.417);
+    --color-secondary-content: oklch(100% 0 0);
+    --color-accent: oklch(60% 0.118 184.704);
+    --color-accent-content: oklch(100% 0 0);
+    --color-neutral: oklch(0% 0 0);
+    --color-neutral-content: oklch(100% 0 0);
+    --color-info: oklch(60% 0.126 221.723);
+    --color-info-content: oklch(100% 0 0);
+    --color-success: oklch(62% 0.194 149.214);
+    --color-success-content: oklch(100% 0 0);
+    --color-warning: oklch(85% 0.199 91.936);
+    --color-warning-content: oklch(0% 0 0);
+    --color-error: oklch(70% 0.191 22.216);
+    --color-error-content: oklch(0% 0 0);
+    --radius-selector: 0.25rem;
+    --radius-field: 0.25rem;
+    --radius-box: 0.25rem;
+    --size-selector: 0.25rem;
+    --size-field: 0.25rem;
+    --border: 1px;
+    --depth: 0;
+    --noise: 0;
+}
+
+@media (min-width: 375px) {
+    .custom375\:flex {
+        flex-direction: flex;
+    }
+
+    .custom375\:justify-between {
+        justify-content: space-between;
+    }
+}
+
+
+@theme {
+    --text-shadow-md: 0 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+
+html,
+body {
+    background-color: #f0f0f0;
+}
+
+.bg-home {
+    background-image: url("../public/assets/images/bg-home.jpg");
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    opacity: 1;
+}
